[gd_scene load_steps=2 format=3 uid="uid://byoqnc2w2sub3"]

[ext_resource type="Script" uid="uid://bpcwgtkf5xg04" path="res://src/safe_house/rooms/brand_room.gd" id="1_8ap5s"]

[node name="BrandRoom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_8ap5s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "品牌室"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlaceholderLabel" type="Label" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
text = "与各大品牌建立合作关系，获取独特资源！"
horizontal_alignment = 1
vertical_alignment = 1 